hourly_image/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hourly-image
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hourly-image
  template:
    metadata:
      labels:
        app: hourly-image
    spec:
      volumes:
        - name: hourly-image-pv
          persistentVolumeClaim:
            claimName: hourly-image-pvc
      containers:
        - name: hourly-image
          image: hourly-image:1.0
          volumeMounts:
            - name: hourly-image-pv
              mountPath: /usr/src/app/hourly-image-pv
