hourly_image/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hourly-image-svc
spec:
  type: ClusterIP
  selector:
    app: hourly-image
  ports:
    - port: 18082
      protocol: TCP
      targetPort: 8080
